--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,11 @@
     "babylonjs": "^2.4.1"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.16.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-stage-3": "^6.16.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
   }
