--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "babel-core": "^6.17.0",
     "babel-preset-stage-3": "^6.17.0",
+    "koa": "^1.2.4",
+    "koa-router": "^5.4.0",
     "socket.io": "^1.4.8"
   }
 }
