--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "babel-preset-stage-3": "^6.17.0",
     "koa": "^1.2.4",
     "koa-router": "^5.4.0",
+    "koa-static": "^2.0.0",
     "socket.io": "^1.4.8"
   }
 }
